--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql://localhost/odds}
+spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql://oddsdb/odds}
 spring.datasource.username=${DATASOURCE_USERNAME:odds}
 spring.datasource.password=${DATASOURCE_PASSWORD:odds}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
