--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,16 @@
 #spring.datasource.username=sa
 #spring.datasource.password=
 #spring.datasource.driver-class-name=org.h2.Driver
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+#
 
-spring.datasource.url=jdbc:postgresql://localhost/odds
-spring.datasource.username=odds
-spring.datasource.password=odds
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.generate-ddl=true
+spring.datasource.url=jdbc:h2:mem:persondb;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+
+#spring.datasource.url=jdbc:postgresql://localhost/odds
+#spring.datasource.username=odds
+#spring.datasource.password=odds
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.generate-ddl=true
