--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -1,9 +1,8 @@
 spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql://oddsdb/odds}
 spring.datasource.username=${DATASOURCE_USERNAME:odds}
 spring.datasource.password=${DATASOURCE_PASSWORD:odds}
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
